[package]
name = "evo-rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
nalgebra = "0.32.3"
polars = { version = "0.32.1", features = ["lazy"] }
ndarray = { version = "0.15.6", features = ["serde"] }
petgraph = "0.6.4"
