[package]
name = "evo-rl"
description = "A neuroevolution-based ML library for reinforcement learning inspired by NEAT"
license = "MIT OR Apache-2.0"
licensefile = "LICENSE"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Dawnis Chow"]

[lib]
name = "evo_rl"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
nalgebra = "0.32.3"
pyo3 = { git = "https://github.com/pyo3/pyo3", features = ["extension-module"] }
ndarray = { version = "0.15.6", features = ["serde"] }
petgraph = "0.6.4"
pretty_env_logger = "0.5.0"
log = "0.4.20"

[dev-dependencies]
assert_matches = "1.5"
