[package]
name = "evo-rl"
description = "A neuroevolution-based ML library for reinforcement learning inspired by NEAT"
license = "MIT OR Apache-2.0"
licensefile = "LICENSE"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["Dawnis Chow"]
exclude =[".dot", ".png", "jupyter/", "agents/", ".ipynb_checkpoints/", "examples/"]
repository = "https://github.com/dawnis/evo_rl"
homepage = "https://www.evosentientai.com/"
readme = "README.md"

[lib]
name = "evo_rl"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
nalgebra = "0.32.3"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pyo3-log = "0.9.0"
ndarray = { version = "0.15.6", features = ["serde"] }
petgraph = "0.6.4"
pretty_env_logger = "0.5.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5"
wiremock = "0.5"

[package.metadata.docs.rs]
all-features = true

[package.metadata]
documentation = "https://docs.rs/evo_rl"
repository = "https://github.com/dawnis/evo_rl"

[build-dependencies]
pyo3-build-config = "0.21.2"
